# ADSPraktikum

./: .gitignore  README.md
Praktikum_1a/: CMakeLists.txt  List.cpp  List.h  Node.cpp  Node.h  main.cpp
Praktikum_1b/: CMakeLists.txt  Node.h  main.cpp
Praktikum_1c/: CMakeLists.txt  List.h  Node.h  main.cpp  tweet.h
Praktikum_2/: CMakeLists.txt  README.md  RingNode.cpp  RingNode.h  Ringpuffer.cpp  Ringpuffer.h  main.cpp
Praktikum_23/: CMakeLists.txt  ExportZielAnalyse.csv  main.cpp  tree.cpp  tree.h  treenode.cpp  treenode.h
Praktikum_24/: CMakeLists.txt  RingNode.cpp  RingNode.h  Ringpuffer.cpp  Ringpuffer.h  main.cpp  tree.cpp  tree.h
Praktikum_3/: CMakeLists.txt  col.txt  colomp.txt  heapsort.txt  main.cpp  make_plots.m  matrixplots.gnu  mergesort.txt  myalgorithms.cpp  myalgorithms.h  plots.gnu  quicksort.txt  row.txt  rowomp.txt  shellsort.txt
Praktikum_4/: CMakeLists.txt  P4_graph.cpp  P4_graph.h  P4_graphnode.h  P4_main.cpp
Praktikum_5/: CMakeLists.txt  IOSystem.h  main.cpp  p5.txt
